# portfoliogone-backend

./: .env.dist  .gitignore  Makefile  README.md  docker-compose.example.yml  pyproject.toml
app/: __main__.py  const.py  lifespan.py  runner.py  types.py
app/controllers/: game.py
app/enums/: bid_type.py  error_type.py  game_phase.py  ws_session_type.py  ws_update_type.py
app/exceptions/: access.py  base.py  bid_is_already_exists.py  bidding.py  invalid_transaction.py  not_found.py
app/factory/: app.py  config.py  dragonfly.py  session_pool.py
app/models/config/: __init__.py
app/models/config/assets/: __init__.py  game.py  main.py
app/models/config/main/: __init__.py  app.py  base.py  dragonfly.py  jwt.py  nats.py  postgres.py  server.py
app/models/dto/: bid.py  game.py
app/models/http/requests/: auth.py
app/models/http/responses/: base.py  bool.py  string.py
app/models/http/responses/exceptions/: access_error.py  any.py  base.py  invalid_amount.py  invalid_auth_token.py  not_enough_funds.py  not_found.py  timeout.py
app/models/sql/: base.py  bid.py  game.py  user.py
app/models/websockets/: __init__.py  base.py  game_update.py
app/services/: scheduler.py  websockets.py
app/services/database/: __init__.py  clearnet.py
app/services/database/dragonfly/: __init__.py  keys.py  repository.py
app/services/database/postgres/repositories/: base.py  bids.py  games.py  general.py  users.py
app/services/tasks/: manage_game.py
app/utils/: currencies.py  mjson.py  time.py
app/web/: exceptions.py
app/web/depends/rest/: global_di.py
app/web/rest/: __init__.py  authorize.py
app/web/rest/bids/: __init__.py
app/web/websockets/: df_pubsub.py
assets/: game_settings.yml
migrations/: env.py
